{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 22,
  "lineage": "0df1d1f4-9ca6-7a86-826e-286daa69a7a6",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg-076ef369812c0a3e4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:781545506517:security-group/sg-076ef369812c0a3e4",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-076ef369812c0a3e4",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-0349a9202ee82357d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "acl-0d432a08ea3204544",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:781545506517:network-acl/acl-0d432a08ea3204544",
            "default_network_acl_id": "acl-0d432a08ea3204544",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d432a08ea3204544",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "781545506517",
            "subnet_ids": [
              "subnet-008d9c21feddbf6a8",
              "subnet-069ee155c08cc089e",
              "subnet-0e6ff1a3b0baf3ff8",
              "subnet-0f7b9f347fd2fee01"
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0349a9202ee82357d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnet-008d9c21feddbf6a8",
            "aws_subnet.subnet-069ee155c08cc089e",
            "aws_subnet.subnet-0e6ff1a3b0baf3ff8",
            "aws_subnet.subnet-0f7b9f347fd2fee01",
            "aws_vpc.vpc-0349a9202ee82357d"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-050203062ea5fd49a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:781545506517:internet-gateway/igw-050203062ea5fd49a",
            "id": "igw-050203062ea5fd49a",
            "owner_id": "781545506517",
            "vpc_id": "vpc-0349a9202ee82357d"
          },
          "dependencies": [
            "aws_vpc.vpc-0349a9202ee82357d"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-01a18b121ab11643f",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:781545506517:route-table/rtb-01a18b121ab11643f",
            "id": "rtb-01a18b121ab11643f",
            "owner_id": "781545506517",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-050203062ea5fd49a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "vpc_id": "vpc-0349a9202ee82357d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-050203062ea5fd49a",
            "aws_vpc.vpc-0349a9202ee82357d"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-076ef369812c0a3e4_egress_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3019923095",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-076ef369812c0a3e4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-076ef369812c0a3e4",
            "aws_vpc.vpc-0349a9202ee82357d"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-076ef369812c0a3e4_ingress_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1950955247",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-076ef369812c0a3e4",
            "self": true,
            "source_security_group_id": "sg-076ef369812c0a3e4",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-076ef369812c0a3e4",
            "aws_vpc.vpc-0349a9202ee82357d"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-008d9c21feddbf6a8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:781545506517:subnet/subnet-008d9c21feddbf6a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008d9c21feddbf6a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "781545506517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-0349a9202ee82357d"
          },
          "dependencies": [
            "aws_vpc.vpc-0349a9202ee82357d"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-069ee155c08cc089e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:781545506517:subnet/subnet-069ee155c08cc089e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069ee155c08cc089e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "781545506517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-0349a9202ee82357d"
          },
          "dependencies": [
            "aws_vpc.vpc-0349a9202ee82357d"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-0e6ff1a3b0baf3ff8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:781545506517:subnet/subnet-0e6ff1a3b0baf3ff8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6ff1a3b0baf3ff8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "781545506517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-0349a9202ee82357d"
          },
          "dependencies": [
            "aws_vpc.vpc-0349a9202ee82357d"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-0f7b9f347fd2fee01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:781545506517:subnet/subnet-0f7b9f347fd2fee01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "172.31.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7b9f347fd2fee01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "781545506517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-0349a9202ee82357d"
          },
          "dependencies": [
            "aws_vpc.vpc-0349a9202ee82357d"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-0349a9202ee82357d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:781545506517:vpc/vpc-0349a9202ee82357d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0d432a08ea3204544",
            "default_route_table_id": "rtb-01a18b121ab11643f",
            "default_security_group_id": "sg-076ef369812c0a3e4",
            "dhcp_options_id": "dopt-04dfac881a9c71bfa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0349a9202ee82357d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a18b121ab11643f",
            "owner_id": "781545506517"
          }
        }
      ]
    }
  ]
}